--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Knowledge 4 All | Data Visualization</title>
+    <title>uncharted-d3</title>
     <meta http-equiv="X-UA-Compatible" content="IE=9;IE=10;IE=Edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
